[BUGFIX] Adds overflow-x hidden to container to prevent coursemap horiz. scroll

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -29,6 +29,8 @@ body.bg-dark {
   z-index: 100;
   padding: $headerHeight 1.5em 0 1.5em;
   margin: auto;
+  overflow-x: hidden;
+
   //$baikal: 960px;
   //  $ontario: 767px;
   //  $ladoga: 600px;
